--- a/quarto-1.qmd
+++ b/quarto-1.qmd
@@ -1,6 +1,41 @@
 ---
 title: "Quarto 1"
 format: html
+execute: 
+  echo: false
+
 ---
 
-    
+```{r}
+library(tidyverse)
+library(palmerpenguins)
+```
+
+```{r}
+# Basic data cleaning: remove NAs
+penguins_clean <- penguins %>%
+  drop_na()
+
+# Create a beautiful scatter plot
+ggplot(penguins_clean, aes(x = flipper_length_mm, 
+                           y = body_mass_g, 
+                           color = species, 
+                           shape = sex)) +
+  geom_point(size = 3, alpha = 0.8) +
+  scale_color_viridis_d(option = "plasma") +
+  labs(
+    title = "Penguin Body Mass vs. Flipper Length",
+    subtitle = "Differentiated by Species and Sex",
+    x = "Flipper Length (mm)",
+    y = "Body Mass (g)",
+    color = "Species",
+    shape = "Sex",
+    caption = "Data: palmerpenguins package"
+  ) +
+  theme_minimal(base_size = 14) +
+  theme(
+    plot.title = element_text(face = "bold", size = 18),
+    plot.subtitle = element_text(size = 14),
+    legend.position = "right"
+  )
+```
